<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@null"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vikrant.currencyconverter.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/amountInput"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/amount_entered"
        android:singleLine="true"
        android:imeActionLabel="Done"
        android:imeOptions="actionDone"
        android:textColorLink="@android:color/holo_blue_light" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/amountInput"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroupFrom">

        <RadioButton
            android:text="@string/from_australia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioAud"
            android:layout_weight="1"
            android:textColorLink="@android:color/holo_blue_light" />

        <RadioButton
            android:text="@string/from_canada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioCad"
            android:layout_weight="1"
            android:textColorLink="@android:color/holo_blue_light" />

        <RadioButton
            android:text="@string/from_india"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioInr"
            android:layout_weight="1"
            android:textColorLink="@android:color/holo_blue_light" />
    </RadioGroup>

    <TextView
        android:text="@string/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupFrom"
        android:layout_alignRight="@+id/radioGroupFrom"
        android:layout_alignEnd="@+id/radioGroupFrom"
        android:layout_marginTop="12dp"
        android:id="@+id/textConvertTo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="normal|bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textConvertTo"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroupTo"
        android:layout_marginTop="10dp">

        <RadioButton
            android:text="@string/to_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioUsd"
            android:layout_weight="1"
            android:textColorLink="@android:color/holo_blue_light" />

        <RadioButton
            android:text="@string/to_britain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGBP"
            android:layout_weight="1"
            android:textColorLink="@android:color/holo_blue_light" />
    </RadioGroup>

    <Button
        android:text="@string/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/btnConvert"
        android:layout_below="@+id/radioGroupTo"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColorLink="@android:color/holo_blue_light" />

    <Button
        android:text="@string/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textResult"
        android:layout_alignLeft="@+id/btnConvert"
        android:layout_alignStart="@+id/btnConvert"
        android:layout_marginTop="24dp"
        android:id="@+id/btnReset"
        android:onClick="onCLear"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textResult"
        android:background="@drawable/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:minWidth="150dp"
        android:layout_below="@+id/btnConvert"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColorLink="@android:color/holo_blue_bright" />

</RelativeLayout>
